--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -63,11 +63,13 @@
     width: 340px
   // подписка
   .newsletter
-    padding-bottom: 93px
     &-title
-      line-height: 25px
+      margin-top: 24px
     &-subscribe
       width: 350px
+      margin-left: 100px
+      margin-top: 0px
+      margin-right: 0px
   // другие предложения
   .packages
     &__title
@@ -88,8 +90,6 @@
       &__item
         max-width: 580px
         padding: 0px 60px 28px 65px
-      &__text
-        line-height: 156%
       &__button
         top: 50%
         transform: translateY(-50%)
@@ -112,13 +112,18 @@
       max-width: 200px
   // подвал
   .footer
-    padding-top: 73px
+    &__container
+      padding: 38px 0 46px 0
     &-wrapper
       grid-template-columns: repeat(8, 1fr)
-      grid-row-gap: 50px
+      grid-row-gap: 14px
+      margin-bottom: 58px
     &__input
       &-group
         height: 53px
+        margin-bottom: 12px
+      &-wrapper
+        width: 99%
     &-logo
       grid-row: 1 / 2
       grid-column: span 1
@@ -152,9 +157,13 @@
     &__title
       line-height: 21px
       &-contact
-        line-height: 45px
+        line-height: 47px
+        margin-top: 39px
+        margin-bottom: 14px
       &--mb-3
         margin-left: 0px
+        margin-bottom: 35px
+        margin-top: 37px
     &__icon
       &-wrapper
         min-width: 47px
@@ -168,12 +177,15 @@
       &:hover
         color: inherit
     &__message
-      margin-bottom: 22px
+      margin-bottom: 19px
+      width: 99%
     &__button
       min-width: 160px
       padding: 17px
     &__bottom
       width: 100%
+    &__info
+      margin-right: 5px
   .main-information
     &__link
       &:hover
@@ -181,14 +193,10 @@
   // модельное окно
   .modal
     &__dialog
-      max-width: 400px
+      max-width: 440px
       padding: 30px 70px
-    &__info
-      order: 1
-      flex-basis: 100%
-      margin-top: 15px
-    &__button
-      order: 2
+    &__form
+      width: 300px
 
 @media (max-width: 767px)
   .container,
@@ -321,20 +329,20 @@
         grid-template-rows: 15% 190px 122px auto
   // рассылка
   .newsletter
-    padding: 92px 0 93px 0
     &-wrapper
       max-width: 576px
       width: 92%
       flex-direction: column
       align-items: self-start
-    &__title
-      margin-bottom: 37px
     &-title
+      margin-bottom: 37px
       font-size: 20px
       line-height: 25px
       &__strong
         font-size: 30px
         line-height: 38px
+    &-subscribe
+      margin-bottom: 81px
   // отзывы
   .reviews
     &__title
@@ -391,11 +399,27 @@
       &-form
         grid-row: 5
         grid-column: span 5
+  // модальное окно
+  .modal
+    &__dialog
+      max-width: 480px
+    &__form
+      width: 302px
+    &__info
+      flex-direction: column
+    &__button
+      order: 2
+    &__text
+      order: 1
+      flex-basis: 100%
+      margin-bottom: 11px
 
 @media (max-width: 576px)
   .container
     max-width: 280px
   // шапка
+  .logo
+    width: 98px
   .navbar
     &-top
       padding-top: 25px
@@ -422,12 +446,13 @@
       height: 165px
   // рассылка
   .newsletter
-    padding: 76px 0 83px 0
+    padding: 0px 0 82px 0
     &-wrapper
       margin-left: 19px
-    &__title
-      margin-bottom: 35px
+      min-height: 237px
     &-title
+      margin-top: 77px
+      margin-bottom: 35px
       font-size: 20px
       line-height: 25px
       &__strong
@@ -435,8 +460,10 @@
         line-height: 44px
     &-subscribe
       width: 280px
-      margin-left: auto
+      margin-left: 0
+      margin-bottom: 0
       &__input
+        width: 280px
         padding-left: 20px
   // отзывы
   .reviews
@@ -451,7 +478,7 @@
     padding-top: 22px
     padding-bottom: 39px
     &__title
-      margin-bottom: 38px
+      margin-bottom: 37px
       font-size: 18px
       line-height: 23px
     &__card
@@ -467,19 +494,19 @@
     order: 3
   // другие предложения
   .packages
-    padding-top: 22px
+    padding: 22px 0 45px 0
     &__title
       margin-bottom: 38px
       font-size: 18px
       line-height: 23px
   .pack
-    height: 350px
+    height: 355px
     &__image
       height: 150px
     &__offer
       top: 15px
     &__info
-      padding: 10px 15px
+      padding: 14px 17px
     &__title
       margin-bottom: 18px
       line-height: 19px
@@ -491,15 +518,21 @@
       &__old
         font-size: 12px
         line-height: 15px
+      &__button
+        padding: 7px 22px
+        font-size: 12px
+        line-height: 16px
   .detailed
     &-pack
       display: none
   // подвал
   .footer
-    padding-top: 67px
+    &__container
+      padding: 68px 0 46px 0
     &-wrapper
       grid-template-columns: 1fr
       grid-row-gap: 37px
+      margin-bottom: 16px
     &-logo
       grid-row: 1
       grid-column: 1
@@ -510,6 +543,8 @@
         flex-direction: column
         align-items: flex-start
         margin: 0px
+      &-links
+        min-width: 86px
     &__additional
       grid-row: 4
       grid-column: 1
@@ -528,34 +563,47 @@
       &-form
         grid-row: 7
         grid-column: 1
-        margin-top: 22px
+    &__form
+      margin-top: 0
     &__title
       line-height: 13px
       &--inline
-        margin: 7px 0 22px 0px
+        margin: 7px 0 25px 0px
       &-contact
-        line-height: 34px
+        line-height: 32px
         margin-bottom: 18px
+        margin-top: 0px
       &--mb-3
-        margin-bottom: 18px
+        margin-top: 25px
+        margin-bottom: 19px
       &-legal
-        line-height: 11px
+        line-height: 10px
+    &__item
+      line-height: 159%
     &__icon
       &-wrapper
-        min-width: 31px
-        padding: 3px
+        min-width: 30px
+        padding: 2px
     &__input
       &-group
-        flex-basis: 100%
+        margin-bottom: 13px
+        width: 100%
         height: 52px
       &-wrapper
         flex-direction: column
+        width: 100%
     &__message
-      margin-bottom: 13px
+      margin-bottom: 12px
+      width: 100%
+    &__info-bottom
+      margin-bottom: 14px
+      flex-direction: column
+      align-items: flex-start
     &__info
       order: 1
       flex-basis: 100%
-      margin-bottom: 14px
+      margin-bottom: 16px
+      margin-right: 0
     &__button
       order: 2
     &__text
@@ -564,8 +612,12 @@
       flex-direction: column
       align-items: start
       height: 47px
+  .main-information
+    width: 275px
   // модульное окно
   .modal
     &__dialog
       max-width: 282px
       padding: 30px 35px
+    &__form
+      width: 212px
