--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,14 +1,14 @@
 .newsletter
   position: relative
   overflow: hidden
-  padding: 97px 0 88px 0
+  // padding: 97px 0 88px 0
   &::before
     content: ''
     position: absolute
     top: 0
     left: 0
-    right: 0
-    bottom: 0
+    // right: 0
+    // bottom: 0
     width: 100%
     height: 100%
     background-color: rgba($dark, 0.8)
@@ -18,11 +18,12 @@
     display: flex
     align-items: center
     justify-content: space-between
+    min-height: 260px
     max-width: 731px
   &-title
     max-width: 250px
     z-index: 5
-    margin: 0
+    margin-top: 31px
     color: $light
     font-weight: 300
     font-size: 24px
@@ -35,14 +36,15 @@
       text-transform: uppercase
   &-subscribe
     position: relative
-    margin-top: 2px
+    height: 100%
     margin-right: auto
     margin-left: 131px
     margin-bottom: 0
+    margin-top: 10px
     width: 351px
     height: 55px
     border-radius: 4px
-    overflow: hidden
+    // overflow: hidden
     &__input
       // position: absolute
       // width: 100%
