--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -81,7 +81,7 @@
       padding: 10px 25px
       border: none
       border-radius: 4px
-      font-family: Nunito
+      font-family: 'Nunito', sans-serif
       font-weight: 600
       font-size: 14px
       line-height: 19px
