--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,11 @@ label.validate-error::after {
   width: 177px;
 }
 
+.logo__image {
+  width: 177px;
+  height: 19px;
+}
+
 .search {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1573,6 +1578,7 @@ label.validate-error::after {
 
 .footer__logo {
   width: 153px;
+  height: 100%;
 }
 
 .footer__category {
@@ -1961,6 +1967,10 @@ label.validate-error::after {
   .logo {
     width: 132px;
   }
+  .logo__image {
+    width: 132px;
+    height: 15px;
+  }
   .navbar-top {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -2210,7 +2220,7 @@ label.validate-error::after {
   body {
     padding-top: 70px;
   }
-  .navbar--mobile-fixed {
+  .navbar-mobile-fixed {
     position: fixed;
     left: 0;
     top: 0;
@@ -2515,6 +2525,10 @@ label.validate-error::after {
   }
   .logo {
     width: 98px;
+  }
+  .logo__image {
+    width: 98px;
+    height: 11px;
   }
   .navbar-top {
     padding-top: 25px;
