--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,6 +11,9 @@
   // шапка
   .logo
     width: 132px
+    &__image
+      width: 132px
+      height: 15px
   .navbar
     &-top
       padding-top: 30px
@@ -207,7 +210,7 @@
     padding-top: 70px
   // шапка
   .navbar
-    &--mobile
+    &-mobile
       &-fixed
         position: fixed
         left: 0
@@ -420,6 +423,9 @@
   // шапка
   .logo
     width: 98px
+    &__image
+      width: 98px
+      height: 11px
   .navbar
     &-top
       padding-top: 25px
