--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -36,6 +36,9 @@
           display: none
 .logo
   width: 177px
+  &__image
+    width: 177px
+    height: 19px
 .search
   display: flex
   position: relative
