--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -160,8 +160,6 @@
     color: inherit
     text-decoration: none
     text-transform: uppercase
-    &:hover
-      color: $primary
   &__call-description
     margin-left: 9px
   &__button
@@ -185,7 +183,7 @@
     border: none
     overflow: hidden
 .button
-  &__thankyou
+  &-thankyou
     margin-top: 40px
     min-width: 110px
     min-height: 40px
