--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -27,8 +27,6 @@
       &__link
         font-size: 12px
         line-height: 15px
-        &:hover
-          color: inherit
   .search
     &__input
       width: 340px
@@ -36,13 +34,9 @@
     &__avatar
       margin-left: 26px
     &__name
-      &:hover
-        color: $text-color
   .breadcrumb
     &-list
       &__link
-        &:hover
-          color: inherit
   // об отеле
   .hotel
     padding-bottom: 56px
@@ -59,9 +53,6 @@
     margin-right: 20px
     margin-bottom: 0
     padding: 28px 22px
-    &__call-number
-      &:hover
-        color: inherit
   .map
     width: 340px
   // подписка
@@ -102,7 +93,7 @@
           left: 0px
   // о досуге
   .activities
-    padding-top: 47px
+    padding-top: 45px
     padding-bottom: 49px
     &-wrapper
       flex-wrap: wrap
@@ -116,10 +107,10 @@
   // подвал
   .footer
     &__container
-      padding: 38px 0 46px 0
+      padding: 72px 0 46px 0
     &-wrapper
       grid-template-columns: repeat(8, 1fr)
-      grid-row-gap: 14px
+      grid-row-gap: 48px
       margin-bottom: 58px
     &__input
       &-group
@@ -161,12 +152,12 @@
       line-height: 21px
       &-contact
         line-height: 47px
-        margin-top: 39px
+        margin-top: 5px
         margin-bottom: 14px
       &--mb-3
         margin-left: 0px
-        margin-bottom: 35px
-        margin-top: 37px
+        margin-bottom: 0px
+        margin-top: 3px
     &__icon
       &-wrapper
         min-width: 47px
@@ -176,9 +167,6 @@
     &__text
       margin-bottom: 21px
       line-height: 158%
-    &__link
-      &:hover
-        color: inherit
     &__message
       margin-bottom: 19px
       width: 99%
@@ -189,10 +177,6 @@
       width: 100%
     &__info
       margin-right: 5px
-  .main-information
-    &__link
-      &:hover
-        color: inherit
   // модельное окно
   .modal
     &__dialog
@@ -345,6 +329,7 @@
         font-size: 30px
         line-height: 38px
     &-subscribe
+      margin-left: 0px
       margin-bottom: 81px
   // отзывы
   .reviews
@@ -627,3 +612,76 @@
       padding: 30px 35px
     &__form
       width: 212px
+  .stars
+    flex-basis: 23%
+
+@media ( min-width: 992px )
+
+  // .activities
+  .card
+    &__button
+      &:hover
+        background: $dark
+        color: $light
+        box-shadow: inset 0 0 0 3px $primary
+
+  .breadcrumb
+    &-list
+      &__link
+        &:hover
+          color: $primary
+
+  .footer
+    &__link
+      &:hover
+        color: $primary
+    &__img
+      &:hover
+        fill: $primary
+  .main-information
+    &__link
+      &:hover
+        color: $primary
+
+  .navbar
+    &-menu
+      &__link
+        &:hover
+          color: $primary
+
+  .hotel
+    &__call-number
+      &:hover
+        color: $primary
+  .search
+    &__button
+      &:hover
+        background: $dark
+        color: $primary
+        box-shadow: inset 0 0 0 3px $primary
+  .user
+    &__name
+      &:hover
+        color: $primary
+
+  .newsletter
+    &-subscribe
+      &__button
+        &:hover
+          background: $dark
+          color: $light
+          box-shadow: inset 0 0 0 3px $primary
+
+  .pack
+    &-price
+      &__button
+        &:hover
+          background: rgba(0,0,0,0)
+          color: $primary
+          box-shadow: inset 0 0 0 3px $primary
+
+  .button
+    &:hover
+      background: rgba(0,0,0,0)
+      color: $primary
+      box-shadow: inset 0 0 0 3px $primary
