--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -649,15 +649,17 @@
         &:hover
           color: $primary
 
-  .hotel
-    &__call-number
+  // .hotel
+
+  .booking
+    &__call-description
       &:hover
         color: $primary
   .search
     &__button
       &:hover
         background: $dark
-        color: $primary
+        color: $light
         box-shadow: inset 0 0 0 3px $primary
   .user
     &__name
@@ -677,11 +679,11 @@
       &__button
         &:hover
           background: rgba(0,0,0,0)
-          color: $primary
+          color: $light
           box-shadow: inset 0 0 0 3px $primary
 
   .button
     &:hover
       background: rgba(0,0,0,0)
-      color: $primary
+      color: $light
       box-shadow: inset 0 0 0 3px $primary
