--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -3,7 +3,7 @@
   background-color: $secondary
   border-radius: 3px
 ::-webkit-scrollbar-thumb
-  background-color: darken(#F5FAFE, 20%)
+  background-color: darken($secondary, 20%)
   border-radius: 3px
 
 .packages
