--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -684,12 +684,12 @@
     &-price
       &__button
         &:hover
-          background: rgba(0,0,0,0)
+          background: $dark
           color: $light
           box-shadow: inset 0 0 0 3px $primary
 
   .button
     &:hover
-      background: rgba(0,0,0,0)
+      background: $dark
       color: $light
       box-shadow: inset 0 0 0 3px $primary
