--- a/css/style.css
+++ b/css/style.css
@@ -2856,13 +2856,13 @@ label.validate-error::after {
             box-shadow: inset 0 0 0 3px #ec1f46;
   }
   .pack-price__button:hover {
-    background: rgba(0, 0, 0, 0);
+    background: #0A223D;
     color: #FFFFFF;
     -webkit-box-shadow: inset 0 0 0 3px #ec1f46;
             box-shadow: inset 0 0 0 3px #ec1f46;
   }
   .button:hover {
-    background: rgba(0, 0, 0, 0);
+    background: #0A223D;
     color: #FFFFFF;
     -webkit-box-shadow: inset 0 0 0 3px #ec1f46;
             box-shadow: inset 0 0 0 3px #ec1f46;
