--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -688,6 +688,13 @@
           color: $light
           box-shadow: inset 0 0 0 3px $primary
 
+  .search
+    &__button
+      &:hover
+        background: $dark
+        color: $light
+        box-shadow: inset 0 0 0 3px $primary
+
   .button
     &:hover
       background: $dark
