--- a/css/style.css
+++ b/css/style.css
@@ -2861,6 +2861,12 @@ label.validate-error::after {
     -webkit-box-shadow: inset 0 0 0 3px #ec1f46;
             box-shadow: inset 0 0 0 3px #ec1f46;
   }
+  .search__button:hover {
+    background: #0A223D;
+    color: #FFFFFF;
+    -webkit-box-shadow: inset 0 0 0 3px #ec1f46;
+            box-shadow: inset 0 0 0 3px #ec1f46;
+  }
   .button:hover {
     background: #0A223D;
     color: #FFFFFF;
