--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -19,7 +19,6 @@
   height: 255px
   border-radius: 6px
   padding: 24px 26px
-  overflow: hidden
   &::before
     content: ''
     position: absolute
@@ -47,6 +46,7 @@
     font-weight: 700
     font-size: 16px
     line-height: 20px
+    overflow: auto
   &__button
     font-family: 'Nunito', sans-serif
     font-weight: 600
