--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -13,6 +13,14 @@ body
 img
   max-width: 100%
 
+::-webkit-scrollbar
+  width: 3px
+  background-color: $secondary
+  border-radius: 3px
+::-webkit-scrollbar-thumb
+  background-color: darken($secondary, 20%)
+  border-radius: 3px
+
 .form
   display: flex
   align-items: center
