--- a/css/style.css
+++ b/css/style.css
@@ -1303,6 +1303,7 @@ label.validate-error::after {
   height: 255px;
   border-radius: 6px;
   padding: 24px 26px;
+  overflow: hidden;
 }
 
 .card::before {
